[package]
name = "rocksdb-rs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
cxx = { version = "1.0.194", features = ["c++17"] }
lazy_static = "1.5.0"
regex = "1.12.2"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[build-dependencies]
cmake = "0.1.57"
cxx-build = { version = "1.0.188", features = ["parallel"] }

[features]
build-cpp = []
