[package]
name = "dependency-graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
build-common = { path = "../build-common" }
clang = { version = "2.0.0", features = ["runtime", "clang_10_0"] }
clang-sys = { version = "1.7.0", features = ["runtime", "clang_10_0"] }
